introduce paths64 and path64 classes